Update full page examples with footer
This commit updates the announcement example to fix the footer
layout to a two-thirds/one-third layout as it was before, using the
new `width` macro option.

This commit updates the campaign page example. It builds a footer based on
the example screenshot from https://github.com/alphagov/govuk-frontend/issues/1726

--- a/app/views/full-page-examples/announcements/index.njk
+++ b/app/views/full-page-examples/announcements/index.njk
@@ -157,6 +157,7 @@ notes: Based on https://www.gov.uk/government/news/strictly-vampires-and-sausage
   navigation: [
     {
       title: "Services and information",
+      width: "two-thirds",
       columns: 2,
       items: [
         {
@@ -227,6 +228,7 @@ notes: Based on https://www.gov.uk/government/news/strictly-vampires-and-sausage
     },
     {
       title: "Departments and policy",
+      width: "one-third",
       items: [
         {
           href: "#",
