Add new `width` macro option
Allow users to set the width of a footer section explicitly.
For example: set `width: 'two-thirds'` for a two-third section.

--- a/app/views/examples/footer-alignment/index.njk
+++ b/app/views/examples/footer-alignment/index.njk
@@ -123,6 +123,7 @@
     "navigation": [
       {
         "title": "Two column list",
+        "width": "two-thirds",
         "columns": 2,
         "items": [
           {
