--- a/src/govuk/components/radios/_index.scss
+++ b/src/govuk/components/radios/_index.scss
@@ -67,7 +67,7 @@
   }
 
   .govuk-radios__label {
-    display: inline-block;
+    display: block;
     margin-bottom: 0;
     padding: 8px $govuk-radios-label-padding-left-right govuk-spacing(1);
     cursor: pointer;
