--- a/govuk/components/_all.scss
+++ b/govuk/components/_all.scss
@@ -29,5 +29,6 @@
 @import "select/index";
 @import "skip-link/index";
 @import "table/index";
+@import "task-list/index";
 @import "textarea/index";
 @import "warning-text/index";
