--- a/src/govuk/helpers/_links.scss
+++ b/src/govuk/helpers/_links.scss
@@ -273,7 +273,9 @@
   // Force a colour change on hover to work around a bug in Safari
   // https://bugs.webkit.org/show_bug.cgi?id=224483
   &:hover {
-    color: if($govuk-text-colour == inherit, inherit, rgba($govuk-text-colour, .99));
+    @if (type-of($govuk-text-colour) == color) {
+      color: rgba($govuk-text-colour, .99);
+    }
   }
 
   &:active,
