Fix right padding being removed from no-actions rows
If some rows in the summary list had actions but others didn't, the rows without actions would result in a slightly wider 'last' column.

This resolves that issue by not applying the right padding removal to these rows.

--- a/src/govuk/components/summary-list/_index.scss
+++ b/src/govuk/components/summary-list/_index.scss
@@ -24,7 +24,7 @@
   }
 
   // Remove right padding from the last column in the row
-  .govuk-summary-list__row > :last-child {
+  .govuk-summary-list__row:not(.govuk-summary-list__row--no-actions) > :last-child {
     padding-right: 0;
   }
 
