--- a/app/views/examples/translated/index.njk
+++ b/app/views/examples/translated/index.njk
@@ -136,7 +136,7 @@
     hint: {
       text: "Peidiwch â chynnwys gwybodaeth bersonol neu ariannol fel eich rhif Yswiriant Gwladol neu fanylion eich cerdyn credyd."
     },
-    fallbackHintText: "Gallwch ddefnyddio hyd at %{count} nod",
+    textareaDescriptionText: "Gallwch ddefnyddio hyd at %{count} nod",
     charactersUnderLimitHtml: {
       one: "Mae gennych %{count} nod ar ôl",
       two: "Mae gennych %{count} nod ar ôl",
@@ -163,7 +163,7 @@
       classes: "govuk-label--l",
       isPageHeading: true
     },
-    fallbackHintText: "Gallwch ddefnyddio hyd at %{count} gair",
+    textareaDescriptionText: "Gallwch ddefnyddio hyd at %{count} gair",
     hint: {
       text: "Peidiwch â chynnwys gwybodaeth bersonol neu ariannol fel eich rhif Yswiriant Gwladol neu fanylion eich cerdyn credyd."
     },
