--- a/src/govuk/components/character-count/template.njk
+++ b/src/govuk/components/character-count/template.njk
@@ -14,7 +14,7 @@
   This means we can't compute a default fallback message (also used as the textarea accessible
   description) to be interpolated in JavaScript once the maximum gets configured there
 #}
-{%- if hasNoLimit and params.fallbackHintText %}{{govukPluralisedI18nAttributes('fallback-hint', {other: params.fallbackHintText})}}{% endif %}
+{%- if hasNoLimit and params.textareaDescriptionText %}{{govukPluralisedI18nAttributes('textarea-description', {other: params.textareaDescriptionText})}}{% endif %}
 {%- if params.charactersUnderLimitText %}{{govukPluralisedI18nAttributes('characters-under-limit', params.charactersUnderLimitText)}}{% endif %}
 {%- if params.charactersAtLimitText %} data-i18n.characters-at-limit="{{ params.charactersAtLimitText | escape}}"{% endif %}
 {%- if params.charactersOverLimitText %}{{govukPluralisedI18nAttributes('characters-over-limit', params.charactersOverLimitText)}}{% endif %}
@@ -42,15 +42,15 @@
     errorMessage: params.errorMessage,
     attributes: params.attributes
   }) }}
-  {%- set fallbackHintLength = params.maxwords or params.maxlength %}
-  {%- set fallbackHintText = params.fallbackHintText or 'You can enter up to %{count} ' + ('words' if params.maxwords else 'characters') %}
+  {%- set textareaDescriptionLength = params.maxwords or params.maxlength %}
+  {%- set textareaDescriptionText = params.textareaDescriptionText or 'You can enter up to %{count} ' + ('words' if params.maxwords else 'characters') %}
   {#
     If the limit is set in JavaScript, we won't be able to interpolate the message
     until JavaScript, so we only set a text if the `maxlength` or `maxwords` options
     were provided to the macro.
   #}
   {{ govukHint({
-    text: ((fallbackHintText) | replace('%{count}', fallbackHintLength) if not hasNoLimit),
+    text: ((textareaDescriptionText) | replace('%{count}', textareaDescriptionLength) if not hasNoLimit),
     id: params.id + '-info',
     classes: 'govuk-character-count__message' + (' ' + params.countMessage.classes if params.countMessage.classes)
   }) }}
