--- a/app/views/examples/translated/index.njk
+++ b/app/views/examples/translated/index.njk
@@ -137,15 +137,15 @@
       text: "Peidiwch â chynnwys gwybodaeth bersonol neu ariannol fel eich rhif Yswiriant Gwladol neu fanylion eich cerdyn credyd."
     },
     textareaDescriptionText: "Gallwch ddefnyddio hyd at %{count} nod",
-    charactersUnderLimitHtml: {
+    charactersUnderLimitText: {
       one: "Mae gennych %{count} nod ar ôl",
       two: "Mae gennych %{count} nod ar ôl",
       few: "Mae gennych %{count} nod ar ôl",
       many: "Mae gennych %{count} nod ar ôl",
       other: "Mae gennych %{count} nod ar ôl"
     },
-    charactersAtLimitHtml: "Mae gennych 0 nod ar ôl",
-    charactersOverLimitHtml: {
+    charactersAtLimitText: "Mae gennych 0 nod ar ôl",
+    charactersOverLimitText: {
       one: "Mae gennych %{count} nod yn ormod",
       two: "Mae gennych %{count} nod yn ormod",
       few: "Mae gennych %{count} nod yn ormod",
@@ -167,15 +167,15 @@
     hint: {
       text: "Peidiwch â chynnwys gwybodaeth bersonol neu ariannol fel eich rhif Yswiriant Gwladol neu fanylion eich cerdyn credyd."
     },
-    wordsUnderLimitHtml: {
+    wordsUnderLimitText: {
       one: "Mae gennych %{count} gair ar ôl",
       two: "Mae gennych %{count} air ar ôl",
       many: "Mae gennych %{count} o eiriau ar ôl",
       few: "Mae gennych %{count} o eiriau ar ôl",
       other: "Mae gennych %{count} o eiriau ar ôl"
     },
-    wordsAtLimitHtml: "Mae gennych 0 gair ar ôl",
-    wordsOverLimitHtml: {
+    wordsAtLimitText: "Mae gennych 0 gair ar ôl",
+    wordsOverLimitText: {
       one: "Mae gennych %{count} gair yn ormod",
       two: "Mae gennych %{count} air yn ormod",
       many: "Mae gennych %{count} o eiriau yn ormod",
