Change back link arrow measurements to use ems
Currently the back link is measured in pixels. This prevents the arrow from changing size when text zooming is in use.

Changing this to em units allows the arrow to scale in size with the text.

em units have been calculated by taking the previous pixel value and dividing it by the text's pixel size (16). e.g. 7px ÷ 16px = 0.4375em.

--- a/src/govuk/components/back-link/_index.scss
+++ b/src/govuk/components/back-link/_index.scss
@@ -1,10 +1,10 @@
 @include govuk-exports("govuk/component/back-link") {
 
   // Size of chevron (excluding border)
-  $chevron-size: 7px;
+  $chevron-size: .4375em;
 
   // Size of chevron border
-  $chevron-border-width: 1px;
+  $chevron-border-width: .0625em;
 
   // Colour of chevron
   $chevron-border-colour: $govuk-secondary-text-colour;
@@ -21,7 +21,7 @@
     margin-bottom: govuk-spacing(3);
 
     // Allow space for the arrow
-    padding-left: 14px;
+    padding-left: .875em;
   }
 
   // Prepend left pointing chevron
