Prevent `iframeResizer.min.js` from loading in preview frame
Moves iFrame Resizer scripts into `{% block scripts %}` so component preview layout can correctly replace them with `iframeResizer.contentWindow.min.js`

Preview iframes do not need `iframeResizer.min.js`

--- a/app/views/layouts/layout.njk
+++ b/app/views/layouts/layout.njk
@@ -10,12 +10,13 @@
 
 {% block bodyEnd %}
   {{ super() }}
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.15/iframeResizer.min.js" integrity="sha256-NZjCYaMfryuJQRMgekHuC02c/Wv4sMRzHG2zyhrVwKU=" crossorigin="anonymous"></script>
-  <!--[if lte IE 8]>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.15/ie8.polyfils.min.js"></script>
-  <![endif]-->
-  <script>
-    window.iFrameResize({}, '.js-component-preview')
-  </script>
-  {% block scripts %}{% endblock %}
+  {% block scripts %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.15/iframeResizer.min.js" integrity="sha256-NZjCYaMfryuJQRMgekHuC02c/Wv4sMRzHG2zyhrVwKU=" crossorigin="anonymous"></script>
+    <!--[if lte IE 8]>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.15/ie8.polyfils.min.js"></script>
+    <![endif]-->
+    <script>
+      window.iFrameResize({}, '.js-component-preview')
+    </script>
+  {% endblock %}
 {% endblock %}
