Review app `html5shiv.js` script sources now `html5shiv.min.js`

--- a/app/views/layouts/_generic.njk
+++ b/app/views/layouts/_generic.njk
@@ -31,7 +31,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/prism.min.js" integrity="sha256-Zb9yKJ/cfs+jG/zIOFL0QEuXr2CDKF7FR5YBJY3No+c=" crossorigin="anonymous"></script>
   <!--<![endif]-->
   <!--[if lt IE 9]>
-    <script src="/vendor/html5-shiv/html5shiv.js"></script>
+    <script src="/vendor/html5-shiv/html5shiv.min.js"></script>
   <![endif]-->
 
   {% block styles %}{% endblock %}
