--- a/app/views/examples/template-default/index.njk
+++ b/app/views/examples/template-default/index.njk
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/public/app-ie8.min.css">
   <![endif]-->
   <!--[if lt IE 9]>
-    <script src="/vendor/html5-shiv/html5shiv.js"></script>
+    <script src="/vendor/html5-shiv/html5shiv.min.js"></script>
   <![endif]-->
 {% endblock %}
 
